src/tests/functionality/assignment_3_io_arrays_comments/invalid_semantic/05_mandatory_array_initializer_2d_wrong_outer_length.c
int main() {
    int matrix[2][2] = {{1, 2}, {3, 4}, {5, 6}};
    return 0;
}
